apps/seafile/memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: memcached
  template:
    metadata:
      labels:
        app.kubernetes.io/name: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6.39-alpine
          args:
            - --memory-limit=128
            - --conn-limit=1024
          ports:
            - name: memcached
              containerPort: 11211
          readinessProbe:
            tcpSocket:
              port: memcached
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: memcached
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 192Mi
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  selector:
    app.kubernetes.io/name: memcached
  ports:
    - name: memcached
      port: 11211
      targetPort: memcached
